[gd_scene load_steps=4 format=3 uid="uid://cbmstr0aaq3rt"]

[ext_resource type="Script" path="res://scenes/yarn-editor.gd" id="1_dvvs5"]
[ext_resource type="Script" path="res://addons/eranot.resizable/resizable.gd" id="2_xiv2h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6p7c0"]

[node name="YarnEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dvvs5")
metadata/_edit_vertical_guides_ = [-395.0]

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPane" type="VBoxContainer" parent="HBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBox/LeftPane"]
layout_mode = 2
text = "Godot Yarn Editor v1.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopToolbar" type="HBoxContainer" parent="HBox/LeftPane"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
alignment = 1

[node name="New" type="Button" parent="HBox/LeftPane/TopToolbar"]
layout_mode = 2
text = "NEW"

[node name="Load" type="Button" parent="HBox/LeftPane/TopToolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "LOAD"

[node name="Save" type="Button" parent="HBox/LeftPane/TopToolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "SAVE"

[node name="SaveAs" type="Button" parent="HBox/LeftPane/TopToolbar"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "SAVE AS"

[node name="VerticalSort" type="Button" parent="HBox/LeftPane/TopToolbar"]
layout_mode = 2
text = "V|Sort"

[node name="HorizontalSort" type="Button" parent="HBox/LeftPane/TopToolbar"]
visible = false
layout_mode = 2
text = "H|Sort"

[node name="LoadTest" type="Button" parent="HBox/LeftPane/TopToolbar"]
visible = false
layout_mode = 2
text = "LoadTest"

[node name="HSeparator1" type="HSeparator" parent="HBox/LeftPane"]
layout_mode = 2

[node name="Filename" type="LineEdit" parent="HBox/LeftPane"]
unique_name_in_owner = true
layout_mode = 2
text = "Filename"

[node name="NodeTitle" type="Label" parent="HBox/LeftPane"]
unique_name_in_owner = true
layout_mode = 2
text = "TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NodeHeader" type="TextEdit" parent="HBox/LeftPane"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "header: value"
wrap_mode = 1

[node name="Resizable" type="Control" parent="HBox/LeftPane/NodeHeader"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("2_xiv2h")
mode = 1
active_handles = 2

[node name="NodeText" type="TextEdit" parent="HBox/LeftPane"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "All the text inside one of the boxes
asdfasdf"
wrap_mode = 1

[node name="BottomToolbar" type="HBoxContainer" parent="HBox/LeftPane"]
layout_mode = 2

[node name="CreateNode" type="Button" parent="HBox/LeftPane/BottomToolbar"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Builds a new yarn node from the header and text areas. Must use \"title: id\" in the header with a unique id."
text = "CREATE"

[node name="Clear" type="Button" parent="HBox/LeftPane/BottomToolbar"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Clears the editor space, for creating a new node."
text = "BLANK"

[node name="UpdateHeader" type="Button" parent="HBox/LeftPane/BottomToolbar"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Parses the header and text body, in case of new title, or new connections. "
text = "PARSE"

[node name="SavePositions" type="Button" parent="HBox/LeftPane/BottomToolbar"]
unique_name_in_owner = true
auto_translate_mode = 1
visible = false
layout_mode = 2
text = "MARK POSITIONS"

[node name="VSeparator" type="VSeparator" parent="HBox/LeftPane/BottomToolbar"]
layout_mode = 2

[node name="DeleteNode" type="Button" parent="HBox/LeftPane/BottomToolbar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Deletes the current node."
text = "DELETE"

[node name="Checkboxes" type="HBoxContainer" parent="HBox/LeftPane"]
auto_translate_mode = 1
layout_mode = 2

[node name="ShowHeaders" type="CheckBox" parent="HBox/LeftPane/Checkboxes"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Show headers in the canvas nodes."
text = "Show Headers"

[node name="ShowTexts" type="CheckBox" parent="HBox/LeftPane/Checkboxes"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
tooltip_text = "Show text bodies in the canvas nodes."
button_pressed = true
text = "Show Texts"

[node name="HSeparator2" type="HSeparator" parent="HBox/LeftPane"]
layout_mode = 2

[node name="Resizable" type="Control" parent="HBox/LeftPane"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("2_xiv2h")
mode = 1
active_handles = 8

[node name="StatusBar" type="Panel" parent="HBox/LeftPane"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="Status" type="Label" parent="HBox/LeftPane/StatusBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Status"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBox"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true
horizontal_scroll_mode = 2
vertical_scroll_mode = 2

[node name="Canvas" type="Control" parent="HBox/ScrollContainer"]
unique_name_in_owner = true
z_index = -1
custom_minimum_size = Vector2(2000, 2000)
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 2
offset_left = 1272.0
offset_right = 1280.0
offset_bottom = 800.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6p7c0")

[node name="OpenFileDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(50, 100)
size = Vector2i(1100, 600)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="SaveAsFileDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
position = Vector2i(50, 100)
size = Vector2i(1100, 600)
ok_button_text = "Save"
access = 2

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="."]
position = Vector2i(100, 640)
dialog_text = "Are you sure?"

[connection signal="pressed" from="HBox/LeftPane/TopToolbar/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="HBox/LeftPane/TopToolbar/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="HBox/LeftPane/TopToolbar/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBox/LeftPane/TopToolbar/SaveAs" to="." method="_on_save_as_pressed"]
[connection signal="pressed" from="HBox/LeftPane/TopToolbar/VerticalSort" to="." method="_on_vertical_sort_pressed"]
[connection signal="pressed" from="HBox/LeftPane/TopToolbar/LoadTest" to="." method="_on_load_test_pressed"]
[connection signal="text_changed" from="HBox/LeftPane/NodeHeader" to="." method="_on_header_text_changed"]
[connection signal="text_changed" from="HBox/LeftPane/NodeText" to="." method="_on_body_text_changed"]
[connection signal="pressed" from="HBox/LeftPane/BottomToolbar/CreateNode" to="." method="_on_create_node_pressed"]
[connection signal="pressed" from="HBox/LeftPane/BottomToolbar/Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="HBox/LeftPane/BottomToolbar/UpdateHeader" to="." method="_on_update_header_pressed"]
[connection signal="pressed" from="HBox/LeftPane/BottomToolbar/DeleteNode" to="." method="_on_delete_pressed"]
[connection signal="toggled" from="HBox/LeftPane/Checkboxes/ShowHeaders" to="." method="_on_show_headers_toggled"]
[connection signal="toggled" from="HBox/LeftPane/Checkboxes/ShowTexts" to="." method="_on_show_text_toggled"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="SaveAsFileDialog" to="." method="_on_save_as_file_dialog_file_selected"]
[connection signal="confirmed" from="DeleteConfirmationDialog" to="." method="_on_delete_confirmation_dialog_confirmed"]
